Fix overlapping PlayerNames

--- a/css/main.css
+++ b/css/main.css
@@ -110,10 +110,11 @@ body{
     font-family: Helvetica;
     display: grid;
     grid-template-columns: 50px 1fr;
-    grid-template-rows: 100px 6fr 50px;
+    grid-template-rows: 100px 6fr 100px 50px;
     grid-template-areas: 
         "hdr hdr"
         "aside main"
+        "aside data"
         "ftr ftr";
 }
 
@@ -138,6 +139,11 @@ aside{
     text-shadow: 1px 1px 2px black;
 }
 
+.data{
+    grid-area: data;
+    background-color: rgba(0,0,0,0.6);
+}
+
 #my-side-panel > h2{
     text-decoration: underline;
     margin-bottom: 20px;
@@ -154,6 +160,8 @@ main{
     grid-area: main;
     background-color: rgba(0,0,0,0.6);
     height: 100%;
+    margin-bottom: 80px;
+    /* min-height: 400px; */
 }
 
 
@@ -178,6 +186,7 @@ main{
 
 .question{
     height: 25%;
+    /* min-height: 80px; */
     justify-content: center;
     padding: 20px 5px 5px 20px;
     font-size: 20px;
@@ -187,7 +196,7 @@ main{
 .options{
     padding-top: 15px;
     width: 100%;
-    height: 100%;
+    height: 75;
     background-color: rgba(135, 206, 235, 0.9);
 }
 
